@@ -1,6 +1,6 @@
 /* This file defines the interface between the simulator and gdb.
 
-   Copyright 1993, 1994, 1996, 1997, 1998, 2000, 2002, 2007
+   Copyright 1993, 1994, 1996, 1997, 1998, 2000, 2002, 2007, 2008
    Free Software Foundation, Inc.
 
    This file is part of GDB.
