@@ -1,6 +1,6 @@
 /* Target signal numbers for GDB and the GDB remote protocol.
    Copyright 1986, 1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997,
-   1998, 1999, 2000, 2001, 2002, 2007 Free Software Foundation, Inc.
+   1998, 1999, 2000, 2001, 2002, 2007, 2008 Free Software Foundation, Inc.
 
    This file is part of GDB.
 
